# PEA

./: AntColony.cpp  AntColony.h  BranchAndBound.cpp  BranchAndBound.h  BruteForce.cpp  BruteForce.h  CMakeLists.txt  GraphMatrix.cpp  GraphMatrix.h  HeldKarp.cpp  HeldKarp.h  README.md  SimulatedAnnealing.cpp  SimulatedAnnealing.h  config.ini  config_optimum.ini  config_sa.ini  main.cpp  simulatedannealing.docx  tsp_conv.cpp  wyniki_sprawko.csv
data/: atsp_ft70.txt  optimum.txt  tsp_bays29.txt  tsp_gr21.txt  tsp_gr24.txt  tsp_hindus.txt  tsp_test.txt
data_aoc/: ftv44.atsp  tsplib.py
sa_excel/: DługoscEpoki.xlsx  MetodaSasiedztwa.xlsx  MetodaWyboruSciezkiPoczatkowej.xlsx  MetodyChlodzenia (version 1).xlsx  MetodyChlodzenia.xlsx  WspolczynnikChlodzenia.xlsx  wynikiraw (version 2).xlsx
